--- a/HajosTeszt/HajosTeszt/wwwroot/cv2.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/cv2.html
@@ -3,31 +3,31 @@
 <head>
     <meta charset="utf-8" />
     <title>Bemutatkozás</title>
-    <link href="stiluslap.css" rel="stylesheet">
+    <link href="cv2.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&family=Shippori+Mincho+B1&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=devicewidth, initial-scale=1.0">
 </head>
 <body>
+    <header>
+        <h1>Hello! Ez az én bemutatkozásom...</h1>
+    </header>
+
     <div id="outer-box">
-        <p>
-            <h1>Hello! Ez az én bemutatkozásom...</h1>
-        </p>
-        <p>
-            <h2>Tartalomjegyzék</h2>
-            <ul>
-                <li><a href="#bemutatkozas">Bemutatkozás</a></li>
-                <li><a href="#hobbik">Hobbijaim</a></li>
-                <li><a href="#skills">Készségeim</a></li>
-            </ul>
-            <hr />
-        </p>
-        <p>
-            <h3><a id="bemutatkozas">Ki vagyok én?</a></h3>
-            <br />
+        <h2 id="menu">Menü</h2>
+        <nav>
+            <a href="#bemutatkozas">Bemutatkozás</a>
+            <a href="#hobbik">Hobbijaim</a>
+            <a href="#skills">Készségeim</a>
+        </nav>
+        <br />
+        <hr />
+        <h3><a id="bemutatkozas">Ki vagyok én?</a></h3>
+        <article>
             Takács Bálint vagyok, a Budapesti Corvinus Egyetem másodéves hallgatója. Jelenleg egy HR Startup vállalatnál vagyok
             IT Projekt Menedzser, továbbá a Business IT Club - Corvinus nevű diákszervezetben vagyok Sales koordinátor. Az időm nagy részében fejlesztem magam, és
             folyamatosan új tanulási lehetőséget keresek. Szeretek edzeni, ugyanis az nem csak testileg, de szellemileg is felfrissít.
-        </p>
+        </article>
         <hr class="masodik-hr" />
         <div id="center">
             <div id="box1">
@@ -70,5 +70,9 @@
             <img class="profile-picture" src="kep.jpg" alt="Profilkép" />
         </a>
     </div>
+
+    <footer>
+        <p><b>E-mail:</b> balint.takacs3@stud.uni-corvinus.hu</p>
+    </footer>
 </body>
 </html>
