mobil query added in CSS - HajosTeszt

--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=devicewidth, initial-scale=1.0">
     <link rel="stylesheet" href="hajo.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hajós teszt</title>
 </head>
 <body>
@@ -15,9 +15,9 @@
 
         <div id="kozepso">
             <div id="valaszok">
-                <div id="válasz1" class="kerdes">Válasz 1</div>
-                <div id="válasz2" class="kerdes">Válasz 2</div>
-                <div id="válasz3" class="kerdes">Válasz 3</div>
+                <div id="válasz1" class="kattinthato">Válasz 1</div>
+                <div id="válasz2" class="kattinthato_jo">Válasz 2</div>
+                <div id="válasz3" class="kattinthato_rossz">Válasz 3</div>
             </div>
             <div id="kep">
                 <img id="kep1" src="https://szoft1.comeback.hu/hajo/teszt-0050.jpg" />
