--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="hajo.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hajós teszt</title>
+    <script src="hetedik.js"></script>
 </head>
 <body>
     <div id="kulso">
@@ -15,9 +16,9 @@
 
         <div id="kozepso">
             <div id="valaszok">
-                <div id="válasz1" class="kattinthato">Válasz 1</div>
-                <div id="válasz2" class="kattinthato_jo">Válasz 2</div>
-                <div id="válasz3" class="kattinthato_rossz">Válasz 3</div>
+                <div id="valasz1" class="kattinthato">Válasz 1</div>
+                <div id="valasz2" class="kattinthato">Válasz 2</div>
+                <div id="valasz3" class="kattinthato">Válasz 3</div>
             </div>
             <div id="kep">
                 <img id="kep1" src="https://szoft1.comeback.hu/hajo/teszt-0050.jpg" />
@@ -30,5 +31,6 @@
         </div>
 
     </div>
+
 </body>
 </html>
