--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.html
@@ -26,8 +26,8 @@
         </div>
 
         <div id="vezerlo">
-            <div class="gomb">Vissza</div>
-            <div class="gomb">Előre</div>
+            <button class="gomb" id="elore">Vissza</button>
+            <button class="gomb" id="vissza">Előre</button>
         </div>
 
     </div>
