--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.html
@@ -5,7 +5,6 @@
     <link rel="stylesheet" href="hajo.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hajós teszt</title>
-    <script src="hetedik.js"></script>
 </head>
 <body>
     <div id="kulso">
@@ -26,11 +25,12 @@
         </div>
 
         <div id="vezerlo">
-            <button class="gomb" id="elore">Vissza</button>
-            <button class="gomb" id="vissza">Előre</button>
+            <button class="gomb" id="vissza">Vissza</button>
+            <button class="gomb" id="elore">Előre</button>
         </div>
 
     </div>
 
+    <script src="hetedik.js"></script>
 </body>
 </html>
