12. gyak teljes + javitott

--- a/HajosTeszt/HajosTeszt/wwwroot/hajo.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/hajo.html
@@ -15,9 +15,9 @@
 
         <div id="kozepso">
             <div id="valaszok">
-                <div id="valasz1" class="kattinthato">Válasz 1</div>
-                <div id="valasz2" class="kattinthato">Válasz 2</div>
-                <div id="valasz3" class="kattinthato">Válasz 3</div>
+                <div id="valasz1" class="kattinthato" onclick="valasztas(1)" >Válasz 1</div>
+                <div id="valasz2" class="kattinthato" onclick="valasztas(2)" >Válasz 2</div>
+                <div id="valasz3" class="kattinthato" onclick="valasztas(3)" >Válasz 3</div>
             </div>
             <div id="kep">
                 <img id="kep1" src="https://szoft1.comeback.hu/hajo/teszt-0050.jpg" />
