--- a/HajosTeszt/HajosTeszt/wwwroot/index.html
+++ b/HajosTeszt/HajosTeszt/wwwroot/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="refresh" content="0; url=hajo.html">
+    <meta http-equiv="refresh" content="0; url=leadando.html">
     <title></title>
 </head>
 <body>
